# obsidian

./: .gitignore  Cargo.toml
src/: config.rs  deck.rs  main.rs
