[package]
name = "obsidian"
version = "0.1.0"
authors = ["KatoMono Enkeli <k4t0mono@gmail.com>"]
description = "A cli oracle for your day"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
simplelog = "0.6"
log = "0.4"